修改解题文档

--- a/problem4/题解文档.md
+++ b/problem4/题解文档.md
@@ -605,7 +605,7 @@ threshold_high = 50#正常摄入最高克数
 
 ## Git 与 GitHub
 
-https://zhuanlan.zhihu.com/p/337959303?utm_psn=1702085440361005056已参考该教程，完成代码上传，并掌握了基础的`Git`操作和可视化管理Git。<img src="picture/10.png"  /><img src="picture/8.png"  />
+https://zhuanlan.zhihu.com/p/337959303?utm_psn=1702085440361005056 已参考该教程，完成代码上传，并掌握了基础的Git操作和可视化管理Git。<img src="picture/10.png"  /><img src="picture/8.png"  />
 
 ## 我到底通关了没
 
